Fix assertion when typing over a selection.  b=137556  sr=kin  r=bryner